# SparkPlayer

./: .gitignore  CMakeLists.txt  README.md  SparkAIAPI.cpp  SparkAIAPI.h  SparkGlobalHotkey.cpp  SparkGlobalHotkey.h  SparkMediaControler.cpp  SparkMediaControler.h  SparkPlayer_zh_CN.ts  SparkSettings.cpp  SparkSettings.h  include.h  main.cpp  sparkplayer.cpp  sparkplayer.h  sparkplayer.ui
.VSCodeCounter/2025-03-19_16-57-47/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-20_13-28-34/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-27_19-19-23/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-31_14-54-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-04-01_19-17-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
utils/: Codec.cpp  Codec.h  ImageTools.cpp  ImageTools.h  Path.cpp  Path.h
widgets/: FlowLayout.cpp  FlowLayout.h  ImageBox.cpp  ImageBox.h  MainPage.cpp  MainPage.h  MediaBox.cpp  MediaBox.h  MediaListButton.cpp  MediaListButton.h  PlayListBox.cpp  PlayListBox.h  PlayListButton.cpp  PlayListButton.h  SpeedBox.cpp  SpeedBox.h  TimeLine.cpp  TimeLine.h  TitleBar.cpp  TitleBar.h  VideoBox.cpp  VideoBox.h  VolumeBox.cpp  VolumeBox.h
